# frame-fab

./: .eslintrc.cjs  .gitignore  .tsbuildinfo  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  REFACTORING.md  REFACTORING_STATUS.md  ROADMAP.md  SECURITY.md  SUPPORT.md  commitlint.config.js  dependency-cruiser.config.js  eslint.config.js  index.html  jest.config.cjs  jest.config.js  knip.json  package-lock.json  package.json  playwright.config.mjs  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs-links.yml  docs.yml  release.yml  test.yml
.workbuddy/memory/: 2026-07-09.md
HomebrewFormula/: plotcraft.rb
demo/: README.md
docs/: 404.md  BRAND_GUIDELINES.md  brand-assets.md  design-audit.md  design-system.html  index.html  index.md  test-summary-novel-service.md
e2e/: basic.spec.ts
jscpd-report/: jscpd-report.json
report/: jscpd-report.json
scripts/: install.sh  safe-react-fc-transform.py
src/: App.tsx  ErrorBoundary.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  file.rs
src-tauri/src/constants/: allowed_dirs.rs
src-tauri/src/models/: video_metadata.rs
src-tauri/src/services/ffmpeg/: mod.rs
src-tauri/src/services/video/: analyzer.rs  cutter.rs  preview.rs
(+1025 files in other folders)
